tests/paczka1/fuzzy1/77160624.err
Error in line 8: uhO S379 28,0
Error in line 16: 65c6YE0 S379 61,9
Error in line 9: S843 S379 37,4
Error in line 15: 4XYb1cCth S74 94,1
Error in line 24: S843 S74 -1,6
Error in line 26: FaxWiA8 S379 97,7
Error in line 14: uhO S74 63,4
Error in line 30: uhO S379 21,8
Error in line 35: 4XYb1cCth S843 15,7
